@@ -1,3 +1,9 @@
+2005-03-30 Hans Ulrich Niedermann <gp@n-dimensional.de>
+
+	* libgphoto2/gphoto2-file.c: replace stricmp() by strcasecmp()
+	  #include <gphoto2-port-portability.h> should take care of
+	  portability of strcasecmp()
+
 2005-02-07  Marcus Meissner  <marcus@jet.franken.de>
 
 	* libgphoto2/gphoto2-filesys.c:
